# crates/driver/src/infra/api/routes/solve/dto/mod.rs
@@ -2,6 +2,6 @@ pub mod solve_request;
 mod solve_response;
 
 pub use {
-    solve_request::{Error as AuctionError, SolveRequest},
+    solve_request::{DeltaBase, DeltaBaseMismatch, Error as AuctionError, SolveRequest},
     solve_response::SolveResponse,
 };
